[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/script/dogMal.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="dogMal" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.52588e-05, -1.05947 )
scale = Vector2( 2.25811, 2.35744 )
frames = SubResource( 1 )
animation = "run"

[node name="Timer0" type="Timer" parent="."]

[node name="Timer1" type="Timer" parent="."]
wait_time = 7.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -3.57166 )
scale = Vector2( 7.50834, 7.38929 )
[connection signal="timeout" from="Timer0" to="." method="_on_Timer0_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
